fix: change line-height to fix form view on small devices

--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -145,12 +145,13 @@ body {
   body {
     margin-bottom: 60px; /* Margin bottom by footer height */
   }
+
   .footer {
     position: absolute;
     font-size: 18px;
     bottom: 0;
     width: 100%;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 35px; /* Vertically center the text there */
     background-color: lightgrey;
     color: rgb(48, 46, 46);
   }
@@ -205,6 +206,11 @@ body {
     img.company-logo {
       width: 250px;
       height: 20px;
+    }
+
+    /* Bump up size of company logo */
+    .footer {
+    line-height: 50px; /* Vertically center the text there */
     }
   }
   
